Versuchter Bugfix bei TurnierpunkteGUI