@@ -20,7 +20,7 @@ public class Runde {
         this.speicherung = speicherung;
         this.turnier = turnier;
         int vorhand = wiederholungRunden % 4;
-        rundeModel = new RundeModel(positionSpieler, vorhand, wiederholungRunden, echterSpieler, spieler.getFirst());
+        rundeModel = new RundeModel(positionSpieler, vorhand, wiederholungRunden, echterSpieler, spieler.get(0));
 
         for (int i = 0; i < 4; i++) {
             ArrayList<Spielkarte> spielKartenProSpieler = new ArrayList<>(spielKarten.subList(i * 8, (i + 1) * 8));
@@ -153,8 +153,8 @@ public class Runde {
         speicherung.DatenSpeichern();
     }
 
-    public void neueRundeStarten() {
-        turnier.turnierPunkteAnzeigen(rundeModel.gebeWiederholungenRunden() + 1, rundeModel.gebeSiegerArray());
+    public void neueRundeStarten(SpielArt spielArt) {
+        turnier.turnierPunkteAnzeigen(rundeModel.gebeWiederholungenRunden() + 1, spielArt, rundeModel.gebeSiegerArray());
     }
 
     public int ermittleSieger(Spielkarte[] aktuellerStich) {
